--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
+    "@types/jsonwebtoken": "^8.5.6",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.4",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
