feat: signup with credentials

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "postgres": "docker run --name advanced-web-db -p 5432:5432 -e POSTGRES_PASSWORD=postgres -d postgres",
+    "postgres": "docker run --name postgres -p 5432:5432 -e POSTGRES_PASSWORD=postgres -d postgres",
     "backend": "lerna run --no-bail --parallel backend",
     "frontend": "lerna run --no-bail --parallel frontend",
     "dev": "lerna run --no-bail --parallel dev"
