--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.1.6",
     "@types/node": "16.11.8",
     "@types/react": "17.0.35",
     "eslint": "7",
