--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -7,6 +7,6 @@ FRONT_END_URL=http://localhost:3000
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=123456
+DB_PASSWORD=postgres
 DB_DATABASE=postgres
 DB_SYNC=true
