--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.0.4",
     "next-auth": "^3.29.0",
+    "npm": "^8.1.4",
     "pg": "^8.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.6",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "16.11.8",
     "@types/react": "17.0.35",
     "eslint": "7",
