--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.20.2",
+    "react-modal": "^3.14.4",
     "react-toastify": "^8.1.0",
     "yup": "^0.32.11"
   },
@@ -32,6 +33,7 @@
     "@types/next-auth": "^3.15.0",
     "@types/node": "16.11.8",
     "@types/react": "17.0.35",
+    "@types/react-modal": "^3.13.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
