--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -22,6 +22,7 @@
     "npm": "^8.1.4",
     "pg": "^8.7.1",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.20.2",
     "react-modal": "^3.14.4",
@@ -33,6 +34,7 @@
     "@types/next-auth": "^3.15.0",
     "@types/node": "16.11.8",
     "@types/react": "17.0.35",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-modal": "^3.13.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
