--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@atlaskit/inline-edit": "^12.1.5",
     "@hookform/resolvers": "^2.8.3",
     "@popperjs/core": "^2.10.2",
     "@types/jsonwebtoken": "^8.5.6",
@@ -21,12 +22,16 @@
     "next-auth": "^3.29.0",
     "npm": "^8.1.4",
     "pg": "^8.7.1",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.20.2",
     "react-modal": "^3.14.4",
+    "react-query": "^3.34.5",
     "react-toastify": "^8.1.0",
+    "rsuite": "^5.4.0",
+    "rsuite-table": "^5.2.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
