--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,6 +22,7 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.0",
     "class-validator": "^0.13.2",
@@ -34,7 +35,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "xlsx": "^0.17.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
