--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
     "install": "^0.13.0",
+    "js-file-download": "^0.4.12",
     "jsonwebtoken": "^8.5.1",
     "next": "12.0.4",
     "next-auth": "^3.29.0",
@@ -26,6 +27,7 @@
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.20.2",
     "react-modal": "^3.14.4",
     "react-query": "^3.34.5",
