--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,6 +22,8 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@ntegral/nestjs-sendgrid": "^1.0.0",
+    "@sendgrid/mail": "^7.6.0",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.0",
