fix: Mark grade composition, list student class, list teacher class, full Assignments

--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -18,5 +18,5 @@ DB_SYNC=true
 #DB_DATABASE=dda61b294b74ke
 #DB_SYNC=true
 
-SEND_GRID_ACCESS_KEY = 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
+SEND_GRID_ACCESS_KEY = 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
 FROM_EMAIL=tranthanhhien2017.kh@gmail.com
