--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -3,6 +3,7 @@ PORT=5000
 
 # CORS
 FRONT_END_URL=http://localhost:3000
+BACK_END_URL=http://localhost:5000
 
 DB_HOST=localhost
 DB_PORT=5432
@@ -18,5 +19,5 @@ DB_SYNC=true
 #DB_DATABASE=dda61b294b74ke
 #DB_SYNC=true
 
-SEND_GRID_ACCESS_KEY = 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
-FROM_EMAIL=tranthanhhien2017.kh@gmail.com
+USER=tranthanhhien2022.kh@gmail.com
+PASS=0934917187aA
