--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -19,5 +19,5 @@ DB_SYNC=true
 #DB_DATABASE=dda61b294b74ke
 #DB_SYNC=true
 
-USER=tranthanhhien2022.kh@gmail.com
-PASS=0934917187aA
+USER=advanced.web.mail.server@gmail.com
+PASS=Admin@123Admin@123
