--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.8.3",
     "@popperjs/core": "^2.10.2",
     "@types/jsonwebtoken": "^8.5.6",
+    "antd": "^4.18.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
