--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,6 +26,7 @@
     "@ntegral/nestjs-sendgrid": "^1.0.0",
     "@sendgrid/mail": "^7.6.0",
     "@types/multer": "^1.4.7",
+    "@types/shortid": "^0.0.29",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.0",
     "class-validator": "^0.13.2",
@@ -41,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "shortid": "^2.2.16",
     "typeorm": "^0.2.41",
     "xlsx": "^0.17.4"
   },
