--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -21,6 +21,7 @@
     "install": "^0.13.0",
     "js-file-download": "^0.4.12",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "next": "12.0.4",
     "next-auth": "^3.29.0",
     "npm": "^8.1.4",
