feat: login by facebook

--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -21,3 +21,6 @@ DB_SYNC=true
 
 USER=advanced.web.mail.server@gmail.com
 PASS=Admin@123Admin@123
+
+FACEBOOK_ID=7055805884436981
+FACEBOOK_SECRET=575bc3e5520f202b8b8263ace6365b53
