--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,6 +26,7 @@
     "@ntegral/nestjs-sendgrid": "^1.0.0",
     "@sendgrid/mail": "^7.6.0",
     "@types/multer": "^1.4.7",
+    "@types/passport-facebook": "^2.1.11",
     "@types/shortid": "^0.0.29",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.0",
@@ -35,6 +36,7 @@
     "export-xlsx": "^0.1.2",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
