--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@atlaskit/inline-edit": "^12.1.5",
-    "@hookform/resolvers": "^2.8.3",
+    "@hookform/resolvers": "^2.8.4",
     "@popperjs/core": "^2.10.2",
     "@types/jsonwebtoken": "^8.5.6",
     "antd": "^4.18.3",
@@ -31,7 +31,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
-    "react-hook-form": "^7.20.2",
+    "react-hook-form": "7.21.1",
     "react-modal": "^3.14.4",
     "react-query": "^3.34.5",
     "react-toastify": "^8.1.0",
