feat: deploy to heroku

--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -10,6 +10,12 @@ RUN npm ci \
     && npm run build \
     && npm prune --production
 
+ARG fe_uri=https://advanced-web-final-frontend.herokuapp.com
+ENV FRONT_END_URL $fe_uri
+
+ARG be_uri=https://advanced-web-final-backend.herokuapp.com
+ENV BACK_END_URL $be_uri
+
 # ---
 
 FROM node:16.8-alpine3.11
@@ -24,8 +30,8 @@ ENV DB_PASSWORD=84cc0b2e87e12f33272b0df62614cac987a7fac887544d7f80a5e282d5300783
 ENV DB_DATABASE=dc9njiiie2chih
 ENV DB_SYNC=true
 
-ENV FRONT_END_URL=https://advanced-web-final-frontend.herokuapp.com/
-ENV BACK_END_URL=https://advanced-web-final-backend.herokuapp.com/
+ENV BACK_END_URL $be_uri
+ENV FRONT_END_URL $api
 
 USER node
 WORKDIR /home/node
