--- a/packages/frontend/Dockerfile
+++ b/packages/frontend/Dockerfile
@@ -8,6 +8,9 @@ RUN npm install
 ARG api_gateway=https://advanced-web-final-backend.herokuapp.com
 ENV NEXT_PUBLIC_API_GATEWAY $api_gateway
 
+ARG fe_uri=https://advanced-web-final-frontend.herokuapp.com
+ENV NEXTAUTH_URL $fe_uri
+
 COPY . .
 RUN npm install -g typescript
 RUN npm run build
@@ -22,11 +25,11 @@ ENV PORT 3000
 ENV NEXT_TELEMETRY_DISABLED 1
 ENV NEXT_PUBLIC_API_GATEWAY $api_gateway
 
-ENV SECRET=fjsdfkjasdhfkjasfdfdfwrwejhgbb2322ref
-ENV NEXTAUTH_URL=https://advanced-web-final-frontend.herokuapp.com
+ENV SECRET fjsdfkjasdhfkjasfdfdfwrwejhgbb2323ref
+ENV NEXTAUTH_URL $fe_uri
 
-ENV FACEBOOK_ID=7055805884436981
-ENV FACEBOOK_SECRET=575bc3e5520f202b8b8263ace6365b53
+ENV FACEBOOK_ID 7055805884436981
+ENV FACEBOOK_SECRET 575bc3e5520f202b8b8263ace6365b53
 
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nextjs -u 1001
